opam-version: "1.2"
name: "mapper"
version: "0.1"
maintainer: "Markus Rudy <webmaster@burgerdev.de>"
authors: ["Markus Rudy <webmaster@burgerdev.de>"]
homepage: "https://github.com/burgerdev/ocaml-ed"
doc: "https://io.burgerdev.de/docs/ocaml-ed"
bug-reports: "https://github.com/burgerdev/ocaml-ed/issues"
dev-repo: "https://github.com/burgerdev/ocaml-ed.git"
license: "GPLv3"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
]
available: [ocaml-version >= "4.06.0"]
