opam-version: "2.0"
version: "1.0"
maintainer: ["Markus Rudy <webmaster@burgerdev.de>"]
authors: ["Markus Rudy"]
homepage: "https://github.com/burgerdev/ocaml-rfc7748"
bug-reports: "https://github.com/burgerdev/ocaml-rfc7748/issues"
dev-repo: "git+https://github.com/burgerdev/ocaml-rfc7748.git"
license: "MIT"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "ocaml"
  "dune" {build}
  "zarith"
  "cstruct"
]
